сваггер рабочий Auth и Route